--- a/client/app/admin/admin.html
+++ b/client/app/admin/admin.html
@@ -1,12 +1,201 @@
-<div ng-include="'components/navbar/navbar.html'"></div>
+<body>
+<header class="navbar navbar-bright navbar-fixed-top" role="banner">
+  <div class="container">
+    <div class="navbar-header">
+      <button class="navbar-toggle" type="button" data-toggle="collapse" data-target=".navbar-collapse">
+        <span class="sr-only">Toggle navigation</span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+      <a href="/" class="navbar-brand">News App</a>
+    </div>
+    <nav class="collapse navbar-collapse" role="navigation">
+      <ul class="nav navbar-nav">
+        <li>
+          <a href="/admin#1">Category 1</a>
+        </li>
+        <li>
+          <a href="/admin#2">Category 2</a>
+        </li>
+        <li>
+          <a href="/admin#3">Category 3</a>
+        </li>
+        <li>
+          <a href="/admin#4">Category 4</a>
+        </li>
+      </ul>
+    </nav>
+  </div>
+</header>
+
+<div id="masthead">
+  <div class="container">
+    <div class="row">
+      <div class="col-md-7">
+        <h1>Trending News
+          <p class="lead"></p>
+        </h1>
+      </div>
+      <div class="col-md-5">
+        <div class="well well-lg">
+          <div class="row">
+            <div class="col-sm-12">
+
+
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div><!-- /cont -->
+
+  <div class="container">
+    <div class="row">
+      <div class="col-md-12">
+        <div class="top-spacer"> </div>
+      </div>
+    </div>
+  </div><!-- /cont -->
+
+</div>
+
 
 <div class="container">
-  <p>The delete user and user index api routes are restricted to users with the 'admin' role.</p>
-  <ul class="list-group">
-    <li class="list-group-item" ng-repeat="user in users">
-        <strong>{{user.name}}</strong><br>
-        <span class="text-muted">{{user.email}}</span>
-        <a ng-click="delete(user)" class="trash"><span class="glyphicon glyphicon-trash pull-right"></span></a>
-    </li>
-  </ul>
+  <div class="row">
+
+    <div class="col-md-12">
+
+      <div class="panel">
+        <div class="panel-body">
+
+
+
+          <!--/stories-->
+          <div ng-repeat="trend in trends">
+            <p>{{trend.text}}
+          </div>
+          <div id="1" class="row">
+            <br>
+            <div class="col-md-2 col-sm-3 text-center">
+              <a class="story-title" href="#"><img alt="" src="http://api.randomuser.me/portraits/thumb/men/58.jpg" style="width:100px;height:100px" class="img-circle"></a>
+            </div>
+            <div class="col-md-10 col-sm-9">
+              <h3>Repurpose Content to Reach a Wider Audience</h3>
+              <div class="row">
+                <div class="col-xs-9">
+                  <h4><span class="label label-default">97thfloor.com</span></h4><h4>
+                  <small style="font-family:courier,'new courier';" class="text-muted">2 hours ago  • <a href="#" class="text-muted">Read More</a></small>
+                  </h4></div>
+                <div class="col-xs-3"></div>
+              </div>
+              <br><br>
+            </div>
+          </div>
+          <hr>
+
+          <div id="2" class="row">
+            <br>
+            <div class="col-md-2 col-sm-3 text-center">
+              <a class="story-title" href="#"><img alt="" src="http://api.randomuser.me/portraits/thumb/women/56.jpg" style="width:100px;height:100px" class="img-circle"></a>
+            </div>
+            <div class="col-md-10 col-sm-9">
+              <h3>14 Useful Sites for Designers</h3>
+              <div class="row">
+                <div class="col-xs-9">
+                  <h4><span class="label label-default">devgarage.com</span></h4><h4>
+                  <small style="font-family:courier,'new courier';" class="text-muted">Yesterday • <a href="#" class="text-muted">Read More</a></small>
+                  </h4></div>
+                <div class="col-xs-3"></div>
+              </div>
+              <br><br>
+            </div>
+          </div>
+          <hr>
+
+          <div id="3" class="row">
+            <br>
+            <div class="col-md-2 col-sm-3 text-center">
+              <a class="story-title" href="#"><img alt="" src="http://api.randomuser.me/portraits/thumb/men/29.jpg" style="width:100px;height:100px" class="img-circle"></a>
+            </div>
+            <div class="col-md-10 col-sm-9">
+              <h3>Measuring Your Link Building with Google Analytics</h3>
+              <div class="row">
+                <div class="col-xs-9">
+                  <h4><span class="label label-default">searchenginewatch.com</span></h4><h4>
+                  <small style="font-family:courier,'new courier';" class="text-muted">Yesterday • <a href="#" class="text-muted">Read More</a></small>
+                  </h4></div>
+                <div class="col-xs-3"></div>
+              </div>
+              <br><br>
+            </div>
+          </div>
+          <hr>
+
+          <div id="4" class="row">
+            <br>
+            <div class="col-md-2 col-sm-3 text-center">
+              <a class="story-title" href="#"><img alt="" src="http://api.randomuser.me/portraits/thumb/women/56.jpg" style="width:100px;height:100px" class="img-circle"></a>
+            </div>
+            <div class="col-md-10 col-sm-9">
+              <h3>Dramatically Raise the Value of Any Piece of Content with These 27 Tactics</h3>
+              <div class="row">
+                <div class="col-xs-9">
+                  <h4><span class="label label-default">searchenginewatch.com</span></h4><h4>
+                  <small style="font-family:courier,'new courier';" class="text-muted">2 days ago • <a href="#" class="text-muted">Read More</a></small>
+                  </h4></div>
+                <div class="col-xs-3"></div>
+              </div>
+              <br><br>
+            </div>
+          </div>
+          <hr>
+
+          <div id="5" class="row">
+            <br>
+            <div class="col-md-2 col-sm-3 text-center">
+              <a class="story-title" href="#"><img alt="" src="http://api.randomuser.me/portraits/thumb/men/29.jpg" style="width:100px;height:100px" class="img-circle"></a>
+            </div>
+            <div class="col-md-10 col-sm-9">
+              <h3>TrendPaper - What's Trending in the World</h3>
+              <div class="row">
+                <div class="col-xs-9">
+                  <h4><span class="label label-default">betali.st</span></h4><h4>
+                  <small style="font-family:courier,'new courier';" class="text-muted">Last week • <a href="#" class="text-muted">Read More</a></small>
+                  </h4></div>
+                <div class="col-xs-3"></div>
+              </div>
+              <br><br>
+            </div>
+          </div>
+          <hr>
+          <!--/stories-->
+
+
+
+        </div>
+      </div>
+
+
+
+    </div><!--/col-12-->
+  </div>
 </div>
+
+
+<hr>
+
+<footer class="footer">
+  <div class="container">
+    <a href="http://twitter.com/lijaimie"><img src="../../assets/images/twitter-wrap.png" alt="Twitter Logo" class="social-icon"></a>
+    <a href="#"><img src="../../assets/images/facebook-wrap.png" alt="Facebook Logo" class="social-icon"></a>
+    <!-- special syntax is an HTML entity that makes the copyright symbol -->
+    <p>&copy; 2014 Jaimie Li</p>
+  </div>
+</footer>
+
+  <!-- script references -->
+    <script src="//ajax.googleapis.com/ajax/libs/jquery/2.0.2/jquery.min.js"></script>
+    <script src="js/bootstrap.min.js"></script>
+  </body>
+</html>
