--- a/client/app/allGoogle/allGoogle.html
+++ b/client/app/allGoogle/allGoogle.html
@@ -67,21 +67,23 @@
               <br>
               <div class="col-md-2 col-sm-3 text-center">
                 <a class="story-title" href="#"><img alt="" src="{{trend.property3.src}}" style="width:100px;height:100px" class="img-circle"></a>
-              </div>
+              </div><!--  col-md-2 -->
               <div class="col-md-10 col-sm-9">
                 <h3 ng-click="google.getNews(trend)"><a>{{ trend.property1.text }}</a></h3>
                 <div class="row">
                   <div class="col-xs-9">
                   <h4><span class="label label-default">{{ trend.property2 }} searches</span></h4><h4>
                   <small style="font-family:courier,'new courier';" <a href="google.getNews(trend)" class="text-muted">Learn More</a></small>
-                  </h4></div>
-                <div class="col-xs-3"></div>
-              </div>
+                  </h4>
+                  </div> <!-- col-xs-9 -->
+                  <div class="col-xs-3">
+                  </div> <!-- col-xs-3 -->
+                </div> <!-- row -->
               <br><br>
-            </div>
+              </div><!--  col-md-10 -->
+            </div><!-- div id -->
+            <hr>
           </div> <!-- ng-repeat trends -->
-          <hr>
-          <ng-include="singleTrend.html"></ng-include>
         </div> <!-- panel-body -->
       </div> <!-- panel -->
     </div> <!-- col-md-12 -->
