--- a/client/app/allGoogle/allGoogle.html
+++ b/client/app/allGoogle/allGoogle.html
@@ -1,105 +1,22 @@
 <!-- <div ng-include="'components/navbar/navbar.html'"></div> -->
-<header class="navbar navbar-bright navbar-fixed-top" role="banner">
-  <div class="container">
-    <div class="navbar-header">
-      <button class="navbar-toggle" type="button" data-toggle="collapse" data-target=".navbar-collapse">
-        <span class="sr-only">Toggle navigation</span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-      </button>
-      <a href="/allGoogle" class="navbar-brand">News App</a>
-<!--     </div>
-    <nav class="collapse navbar-collapse" role="navigation">
-      <ul class="nav navbar-nav">
-        <li>
-          <a href="/allGoogle#0">Trend 1</a>
-        </li>
-        <li>
-          <a href="/allGoogle#1">Trend 2</a>
-        </li>
-        <li>
-          <a href="/allGoogle#2">Trend 3</a>
-        </li>
-        <li>
-          <a href="/allGoogle#3">Trend 4</a>
-        </li>
-      </ul>
-    </nav>
-  </div> -->
-</header>
 
-<div id="masthead">
-  <div class="container">
-    <div class="row">
-      <div class="col-md-7">
-        <h1>Trending News
-          <p class="lead"></p>
-        </h1>
-      </div>
-      <div class="col-md-5">
-        <div class="well well-lg">
-          <div class="row">
-            <div class="col-sm-12">
-            </div>
-          </div>
-        </div>
-      </div>
-    </div> <!-- row -->
-  </div> <!-- container -->
-  <div class="container">
-    <div class="row">
-      <div class="col-md-12">
-        <div class="top-spacer">
-        </div>
-      </div>
-    </div>
-  </div> <!-- container -->
-</div> <!-- masthead -->
+<div ng-include="'app/allGoogle/displayTrends.html'"></div>
+<div ng-if="newsData" ng-include="'app/allGoogle/singleTrend.html'"></div>
 
-<div class="container">
-  <div class="row">
-    <div class="col-md-12">
-      <div class="panel">
-        <div class="panel-body">
-          <div ng-repeat="trend in trendsArr">
-            <div id={{$index}} class="row" ng-click="google.getNews(trend)">
-              <br>
-              <div class="col-md-2 col-sm-3 text-center">
-                <a class="story-title" href="#"><img alt="" src="{{trend.property3.src}}" style="width:100px;height:100px" class="img-circle"></a>
-              </div><!--  col-md-2 -->
-              <div class="col-md-10 col-sm-9">
-                <h3 ng-click="google.getNews(trend)"><a>{{ trend.property1.text }}</a></h3>
-                <div class="row">
-                  <div class="col-xs-9">
-                  <h4><span class="label label-default">{{ trend.property2 }} searches</span></h4><h4>
-                  <small style="font-family:courier,'new courier';" <a href="google.getNews(trend)" class="text-muted">Learn More</a></small>
-                  </h4>
-                  </div> <!-- col-xs-9 -->
-                  <div class="col-xs-3">
-                  </div> <!-- col-xs-3 -->
-                </div> <!-- row -->
-              <br><br>
-              </div><!--  col-md-10 -->
-            </div><!-- div id -->
-            <hr>
-          </div> <!-- ng-repeat trends -->
-        </div> <!-- panel-body -->
-      </div> <!-- panel -->
-    </div> <!-- col-md-12 -->
-  </div> <!-- row -->
-</div> <!-- container -->
+<!-- <div ng-switch on="displayView">
+  <div ng-switch-when="false" ng-include="'app/allGoogle/singleTrend.html'"</div>
+</div> -->
 
 <div class="container">
   <div class="col-md-12">
-    <h1>Trending Topics</h1>
+<!--     <h1>Trending Topics</h1>
     <div ng-repeat="trend in trendsArr">
       <h3 ng-click="google.getNews(trend)"><a>{{ trend.property1.text }}</a></h3>
       <h5># of searches: {{ trend.property2 }}</h5>
       <p><a href="{{trend.property1.href}}">Google Results</a></p>
       <img src="{{trend.property3.src}}">
-    </div>
-    <bars-chart chart-data="myData"></bars-chart>
+    </div> -->
+    <!-- <bars-chart chart-data="myData"></bars-chart>
     <nvd3-scatter-chart
       data="exampleData"
       id="exampleChart"
@@ -114,19 +31,19 @@
       tooltipContent="tooltipXContentFunction()"
       >
       <svg id="chart" width="960" height="500"></svg>
-    </nvd3-scatter-chart>
-    <div ng-if="newsData">
+    </nvd3-scatter-chart> -->
+    <!-- <div ng-if="newsData">
       <h1>Topic: {{ newsData.topic }}</h1>
       <button btn-checkbox btn-checkbox-true="true" btn-checkbox-false="false" class="btn-success" ng-model="showChart">Show Chart</button>
-      <div ng-if="showChart === true" class="chartType">
+      <div ng-if="showChart === true" class="chartType"> -->
 
 <!--         <button id="selectall" ng-click="toggleSelectedSource(newsData.sources)"><u>{{selectText}}</u></button> -->
 
-        <form class="form-inline" name="myForm">
+<!--         <form class="form-inline" name="myForm">
           <div class="form-group">
-            <h4>Select News Source(s)</h4>
+            <h4>Select News Source(s)</h4> -->
 <!--             <p>(listed alphabetically)</p> -->
-            <button ng-click="toggleSelectedSource()" class="btn-danger">Toggle Selected Sources</button>
+            <!-- <button ng-click="toggleSelectedSource()" class="btn-danger">Toggle Selected Sources</button>
             <p ng-if="sourceChosen === 0">Please select at least one source.</p>
             <div ng-repeat="source in newsData.sources | orderBy: 'cleanLabel'">
               <label class="checkbox-inline">
@@ -143,7 +60,7 @@
               <input type="checkbox" id="type-{{$index}}" value="item.type" ng-click="clicked(item)" ng-model="item.selected">{{item.type}}
               </label>
             </div>
-          </div>
+          </div> -->
 <!--           <div class="form-group">
             <h4>Select Entit(ies)</h4> -->
 <!--             <p>(listed by # of articles entity was mentionedi in (most to least)) -->
@@ -155,7 +72,7 @@
               </label>
             </div>
           </div> -->
-        </form>
+<!--         </form>
 
         <nvd3-scatter-chart
             data="newsData.d3"
@@ -173,23 +90,33 @@
             <svg id="chart" width="960" height="500"></svg>
         </nvd3-scatter-chart>
 
-      </div>
-      <div ng-if="newsData.wiki!=='Not Available'">
+      </div> -->
+<!--       <div ng-if="newsData.wiki!=='Not Available'">
         <button btn-checkbox btn-checkbox-true="true" btn-checkbox-false="false" class="btn-success" ng-model="showWiki">Show Wiki</button>
         <div ng-if="showWiki === true">
           <wiki></wiki>
         </div>
-      </div>
-        <div ng-repeat="outlet in newsData.cleanData | limitTo:10 ">
+      </div> -->
+<!--         <div ng-repeat="outlet in newsData.cleanData | limitTo:10 ">
           <h2><a href="{{ outlet.href }}">{{ outlet.text }}</a></h2>
           <p>{{ outlet.body | limitTo:500 }}<p>
           <p>{{ outlet.href }}<p>
           <button btn-checkbox btn-checkbox-true="true" btn-checkbox-false="false" class="btn-warning" ng-model="showSentiment">Show Overall Sentiment</button>
           <h4 ng-show="showSentiment === true"class="sentimentType">Sentiment: {{ outlet.docSentiment.type }}</h4>
-          <h4 ng-show="showSentiment === true"class="sentimentScore">Score: {{ outlet.docSentiment.score }}</h4>
+          <h4 ng-show="showSentiment === true"class="sentimentScore">Score: {{ outlet.docSentiment.score }}</h4> -->
 <!--           <button btn-checkbox btn-checkbox-true="true" btn-checkbox-false="false" class="btn-warning" ng-model="showEntity">Show Entity Sentiment</button> -->
 <!--           <div ng-show="showEntity === true" ng-repeat="entity in outlet.entitySentiment">{{ entity }}</div> -->
-        </div> <!-- ng-repeat outlet -->
-    </div> <!-- ng-if newsData -->
+<!--         </div> ng-repeat outlet
+    </div> ng-if newsData -->
+
+    <footer class="footer">
+      <div class="container">
+        <a href="http://twitter.com/lijaimie"><img src="../../assets/images/twitter-wrap.png" alt="Twitter Logo" class="social-icon"></a>
+        <a href="#"><img src="../../assets/images/facebook-wrap.png" alt="Facebook Logo" class="social-icon"></a>
+        <!-- special syntax is an HTML entity that makes the copyright symbol -->
+        <p>&copy; 2014 Jaimie Li</p>
+      </div>
+    </footer>
+
   </div> <!-- column -->
 </div> <!-- container -->
