--- a/client/app/allGoogle/singleTrend.html
+++ b/client/app/allGoogle/singleTrend.html
@@ -1,1 +1,127 @@
-<h1>single trend page</h1>
+<!-- <header class="navbar navbar-bright navbar-fixed-top" role="banner">
+  <div class="container">
+    <div class="navbar-header">
+      <button class="navbar-toggle" type="button" data-toggle="collapse" data-target=".navbar-collapse">
+        <span class="sr-only">Toggle navigation</span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+      <a href="/allGoogle" class="navbar-brand">News App</a>
+    </div> -->
+<!--     <nav class="collapse navbar-collapse" role="navigation">
+      <ul class="nav navbar-nav">
+        <li>
+          <a href="/allGoogle">Sentiment</a>
+        </li>
+        <li>
+          <a href="/allGoogle">Articles</a>
+        </li>
+        <li>
+          <a href="/allGoogle">Trend 3</a>
+        </li>
+        <li>
+          <a href="/allGoogle">Trend 4</a>
+        </li>
+      </ul> -->
+<!--     </nav>
+  </div>
+</header> -->
+
+<div id="masthead">
+  <div class="container">
+    <div class="row">
+      <div class="col-md-7">
+        <h1>{{ newsData.topic }}
+          <p class="lead"></p>
+        </h1>
+      </div>
+      <div class="col-md-5">
+        <div class="well well-lg">
+          <div class="row">
+            <div class="col-sm-12">
+            </div>
+          </div>
+        </div>
+      </div>
+    </div> <!-- row -->
+  </div> <!-- container -->
+  <div class="container">
+    <div class="row">
+      <div class="col-md-12">
+        <div class="top-spacer">
+        </div>
+      </div>
+    </div>
+  </div> <!-- container -->
+</div> <!-- masthead -->
+
+<div class="container">
+  <div class="row">
+    <div class="col-md-12">
+      <div class="panel">
+        <div class="panel-body">
+
+          <div ng-if="newsData.wiki!=='Not Available'">
+            <wiki></wiki>
+          </div>
+          <br></br>
+          <hr>
+
+          <form class="form-inline" name="myForm">
+            <div class="form-group">
+              <h2>Sentiment Analysis</h2>
+              <h4>Select News Source(s)</h4>
+  <!--             <p>(listed alphabetically)</p> -->
+              <button ng-click="toggleSelectedSource()" class="btn-danger">Toggle Selected Sources</button>
+              <p ng-if="sourceChosen === 0">Please select at least one source.</p>
+              <div ng-repeat="source in newsData.sources | orderBy: 'cleanLabel'">
+                <label class="checkbox-inline">
+                <input type="checkbox" id="source-{{$index}}" value="{{source.label}}" ng-click="clicked(source)" ng-model="source.selected">{{source.cleanLabel}}
+                </label>
+              </div>
+            </div>
+            <div class="form-group">
+              <h4>Select Sentiment Type</h4>
+              <button ng-click="toggleSelectedTypes()" class="btn-danger">Toggle Selected Sentiment Types</button>
+              <p ng-if="typeChosen === 0">Please select at least one type.</p>
+              <div ng-repeat="item in newsData.sentimentTypes">
+                <label class="checkbox-inline">
+                <input type="checkbox" id="type-{{$index}}" value="item.type" ng-click="clicked(item)" ng-model="item.selected">{{item.type}}
+                </label>
+              </div>
+            </div>
+          </form>
+            <nvd3-scatter-chart
+                data="newsData.d3"
+                id="sentimentComparison"
+                width="1000"
+                height="400"
+                interactive="true"
+                tooltips="true"
+                showYaxis="false"
+                forceX="[-1,1]"
+                showLegend="true"
+                transitionDuration="1000"
+                xaxislabel="Sentiment"
+                >
+                <svg id="chart" width="960" height="500"></svg>
+            </nvd3-scatter-chart>
+            <br></br>
+            <hr>
+
+            <br>
+            <div ng-repeat="outlet in newsData.cleanData | limitTo:10 ">
+              <h2><a href="{{ outlet.href }}">{{ outlet.text }}</a></h2>
+              <h4 class="sentimentScore">Sentiment Score: {{ outlet.docSentiment.score }}</h4>
+              <p>{{ outlet.body | limitTo:500 }}<p>
+              <p>{{ outlet.href }}<p>
+            </div>
+            <br></br>
+            <hr>
+
+        </div> <!-- panel-body -->
+      </div> <!-- panel -->
+    </div> <!-- col-md-12 -->
+  </div> <!-- row -->
+</div> <!-- container -->
