--- a/client/app/allGoogle/displayTrends.html
+++ b/client/app/allGoogle/displayTrends.html
@@ -63,12 +63,11 @@
         <div class="panel-body">
           <div ng-repeat="trend in trendsArr">
             <div id={{$index}} class="row" ng-click="google.getNews(trend)">
-              <br>
               <div class="col-md-2 col-sm-3 text-center">
                 <a class="story-title" href="#"><img alt="" src="{{trend.property3.src}}" style="width:100px;height:100px" class="img-circle"></a>
               </div><!--  col-md-2 -->
               <div class="col-md-10 col-sm-9">
-                <h3 ng-click="google.getNews(trend)"><a>{{ trend.property1.text }}</a></h3>
+                <h3 ng-click="google.getNews(trend)"><a>{{$index + 1}}. {{ trend.property1.text }}</a></h3>
                 <div class="row">
                   <div class="col-xs-9">
                   <h4><span class="label label-default">{{ trend.property2 }} searches</span></h4><h4>
@@ -78,7 +77,6 @@
                   <div class="col-xs-3">
                   </div> <!-- col-xs-3 -->
                 </div> <!-- row -->
-              <br><br>
               </div><!--  col-md-10 -->
             </div><!-- div id -->
           <hr>
