--- a/client/app/allGoogle/displayTrends.html
+++ b/client/app/allGoogle/displayTrends.html
@@ -62,7 +62,7 @@
       <div class="panel">
         <div class="panel-body">
           <div ng-repeat="trend in trendsArr">
-            <div id={{$index}} class="row" ng-click="google.getNews(trend)">
+            <div id={{$index}} class="row">
               <div class="col-md-2 col-sm-3 text-center">
                 <a class="story-title" href="#"><img alt="" src="{{trend.property3.src}}" style="width:100px;height:100px" class="img-circle"></a>
               </div><!--  col-md-2 -->
@@ -70,9 +70,9 @@
                 <h3 ng-click="google.getNews(trend)"><a>{{$index + 1}}. {{ trend.property1.text }}</a></h3>
                 <div class="row">
                   <div class="col-xs-9">
-                  <h4><span class="label label-default">{{ trend.property2 }} searches</span></h4><h4>
-                  <small style="font-family:courier,'new courier';" <a href="google.getNews(trend)" class="text-muted">Learn More</a></small>
-                  </h4>
+                  <h4><span class="label label-default"><a href="google.getNews(trend)">{{ trend.property2 }} searches</a></span></h4><h4>
+                <!--   <button style="font-family:courier,'new courier';" ng-click="getTwitter(trend)" class="text-muted">Twitter</a></button>
+                  </h4> -->
                   </div> <!-- col-xs-9 -->
                   <div class="col-xs-3">
                   </div> <!-- col-xs-3 -->
