--- a/client/app/allGoogle/singleTrend.html
+++ b/client/app/allGoogle/singleTrend.html
@@ -114,7 +114,7 @@
             <br>
             <div ng-repeat="outlet in newsData.cleanData | limitTo:10 ">
               <h2><a href="{{ outlet.href }}">{{ outlet.text }}</a></h2>
-              <h4 class="sentimentScore">Sentiment Score: {{ outlet.docSentiment.score }}</h4>
+              <h4 class="sentimentScore">Overall Sentiment Score: {{ outlet.docSentiment.score }}</h4>
               <p>{{ outlet.body | limitTo:500 }}<p>
               <p>{{ outlet.href }}<p>
             </div>
