--- a/client/index.html
+++ b/client/index.html
@@ -19,6 +19,9 @@
     <!-- build:css({.tmp,client}) app/app.css -->
     <link rel="stylesheet" href="app/app.css">
       <!-- injector:css -->
+ <!--      <link rel="stylesheet" href="components/PageLoadingEffects/css/component.css">
+      <link rel="stylesheet" href="components/PageLoadingEffects/css/demo.css">
+      <link rel="stylesheet" href="components/PageLoadingEffects/css/normalize.css"> -->
       <!-- endinjector -->
     <!-- endbuild -->
   </head>
