--- a/client/app/admin/admin.html
+++ b/client/app/admin/admin.html
@@ -1,5 +1,5 @@
 <body>
-<header class="navbar navbar-bright navbar-fixed-top" role="banner">
+<!-- <header class="navbar navbar-bright navbar-fixed-top" role="banner">
   <div class="container">
     <div class="navbar-header">
       <button class="navbar-toggle" type="button" data-toggle="collapse" data-target=".navbar-collapse">
@@ -27,7 +27,7 @@
       </ul>
     </nav>
   </div>
-</header>
+</header> -->
 
 <div id="masthead">
   <div class="container">
@@ -50,230 +50,41 @@
     </div>
   </div><!-- /cont -->
 
-  <div class="container">
     <div class="row">
       <div class="col-md-12">
-        <div class="top-spacer"> </div>
+        <div class="col-md-4">
+          <div class="top-spacer">
+          </div>
+        </div>
       </div>
     </div>
-  </div><!-- /cont -->
+
 
 </div>
 
-
-<div class="container">
-  <div class="row">
-
-    <div class="col-md-12">
-
+<div class="row">
+  <div class="col-md-12">
+    <div class="col-md-4">
       <div class="panel">
         <div class="panel-body">
-
-
-
-          <!--/stories-->
-          <div ng-repeat="trend in trends">
-            <p>{{trend.text}}
-          </div>
-          <div id="1" class="row">
-            <br>
-            <div class="col-md-2 col-sm-3 text-center">
-              <a class="story-title" href="#"><img alt="" src="http://api.randomuser.me/portraits/thumb/men/58.jpg" style="width:100px;height:100px" class="img-circle"></a>
-            </div>
-            <div class="col-md-10 col-sm-9">
-              <h3>Repurpose Content to Reach a Wider Audience</h3>
-              <div class="row">
-                <div class="col-xs-9">
-                  <h4><span class="label label-default">97thfloor.com</span></h4><h4>
-                  <small style="font-family:courier,'new courier';" class="text-muted">2 hours ago  • <a href="#" class="text-muted">Read More</a></small>
-                  </h4></div>
-                <div class="col-xs-3"></div>
+          <div class="sidebar-nav-fixed">
+            <div class="row">
+              <div class="col-md-2 text-center">
+              <a class="story-title" href="#"><img alt="" src="http://t0.gstatic.com/images?q=tbn:ANd9GcSiEafCxmh8yZ5SGR2_UFqAjQi0o08Mfc5Szj01pIdEUgsdoL04TIKro3MR5nx5RF0iCPUG6kw" style="width:100px;height:100px" class="img-circle"></a>
               </div>
-              <br><br>
-            </div>
-          </div>
-          <hr><header class="navbar navbar-bright navbar-fixed-top" role="banner">
-  <div class="container">
-    <div class="navbar-header">
-      <button class="navbar-toggle" type="button" data-toggle="collapse" data-target=".navbar-collapse">
-        <span class="sr-only">Toggle navigation</span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-      </button>
-      <a href="/allGoogle" class="navbar-brand">News App</a>
-    </div>
-    <nav class="collapse navbar-collapse" role="navigation">
-      <ul class="nav navbar-nav">
-        <li>
-          <a href="/allGoogle">Sentiment</a>
-        </li>
-        <li>
-          <a href="/allGoogle">Articles</a>
-        </li>
-        <li>
-          <a href="/allGoogle">Trend 3</a>
-        </li>
-        <li>
-          <a href="/allGoogle">Trend 4</a>
-        </li>
-      </ul>
-    </nav>
-  </div>
-</header>
-
-<div id="masthead">
-  <div class="container">
-    <div class="row">
-      <div class="col-md-7">
-        <h1>Trending News
-          <p class="lead"></p>
-        </h1>
-      </div>
-      <div class="col-md-5">
-        <div class="well well-lg">
-          <div class="row">
-            <div class="col-sm-12">
-            </div>
-          </div>
-        </div>
-      </div>
-    </div> <!-- row -->
-  </div> <!-- container -->
-  <div class="container">
-    <div class="row">
-      <div class="col-md-12">
-        <div class="top-spacer">
+              <div class="col-md-2">
+              <h3>Name</h3>
+              </div>
+            </div> <!-- row -->
+            <hr>
+          </div><!--  nav sidebar -->
         </div>
       </div>
     </div>
-  </div> <!-- container -->
-</div> <!-- masthead -->
-
-<div class="container">
-  <div class="row">
-    <div class="col-md-12">
-      <div class="panel">
-        <div class="panel-body">
-          <div ng-repeat="trend in trendsArr">
-            <div id={{$index}} class="row" ng-click="google.getNews(trend)">
-              <br>
-              <div class="col-md-2 col-sm-3 text-center">
-                <a class="story-title" href="#"><img alt="" src="{{trend.property3.src}}" style="width:100px;height:100px" class="img-circle"></a>
-              </div><!--  col-md-2 -->
-              <div class="col-md-10 col-sm-9">
-                <h3 ng-click="google.getNews(trend)"><a>{{ trend.property1.text }}</a></h3>
-                <div class="row">
-                  <div class="col-xs-9">
-                  <h4><span class="label label-default">{{ trend.property2 }} searches</span></h4><h4>
-                  <small style="font-family:courier,'new courier';" <a href="google.getNews(trend)" class="text-muted">Learn More</a></small>
-                  </h4>
-                  </div> <!-- col-xs-9 -->
-                  <div class="col-xs-3">
-                  </div> <!-- col-xs-3 -->
-                </div> <!-- row -->
-              <br><br>
-              </div><!--  col-md-10 -->
-            </div><!-- div id -->
-          <hr>
-          </div> <!-- ng-repeat trends -->
-        </div> <!-- panel-body -->
-      </div> <!-- panel -->
-    </div> <!-- col-md-12 -->
-  </div> <!-- row -->
-</div> <!-- container -->
-
-
-          <div id="2" class="row">
-            <br>
-            <div class="col-md-2 col-sm-3 text-center">
-              <a class="story-title" href="#"><img alt="" src="http://api.randomuser.me/portraits/thumb/women/56.jpg" style="width:100px;height:100px" class="img-circle"></a>
-            </div>
-            <div class="col-md-10 col-sm-9">
-              <h3>14 Useful Sites for Designers</h3>
-              <div class="row">
-                <div class="col-xs-9">
-                  <h4><span class="label label-default">devgarage.com</span></h4><h4>
-                  <small style="font-family:courier,'new courier';" class="text-muted">Yesterday • <a href="#" class="text-muted">Read More</a></small>
-                  </h4></div>
-                <div class="col-xs-3"></div>
-              </div>
-              <br><br>
-            </div>
-          </div>
-          <hr>
-
-          <div id="3" class="row">
-            <br>
-            <div class="col-md-2 col-sm-3 text-center">
-              <a class="story-title" href="#"><img alt="" src="http://api.randomuser.me/portraits/thumb/men/29.jpg" style="width:100px;height:100px" class="img-circle"></a>
-            </div>
-            <div class="col-md-10 col-sm-9">
-              <h3>Measuring Your Link Building with Google Analytics</h3>
-              <div class="row">
-                <div class="col-xs-9">
-                  <h4><span class="label label-default">searchenginewatch.com</span></h4><h4>
-                  <small style="font-family:courier,'new courier';" class="text-muted">Yesterday • <a href="#" class="text-muted">Read More</a></small>
-                  </h4></div>
-                <div class="col-xs-3"></div>
-              </div>
-              <br><br>
-            </div>
-          </div>
-          <hr>
-
-          <div id="4" class="row">
-            <br>
-            <div class="col-md-2 col-sm-3 text-center">
-              <a class="story-title" href="#"><img alt="" src="http://api.randomuser.me/portraits/thumb/women/56.jpg" style="width:100px;height:100px" class="img-circle"></a>
-            </div>
-            <div class="col-md-10 col-sm-9">
-              <h3>Dramatically Raise the Value of Any Piece of Content with These 27 Tactics</h3>
-              <div class="row">
-                <div class="col-xs-9">
-                  <h4><span class="label label-default">searchenginewatch.com</span></h4><h4>
-                  <small style="font-family:courier,'new courier';" class="text-muted">2 days ago • <a href="#" class="text-muted">Read More</a></small>
-                  </h4></div>
-                <div class="col-xs-3"></div>
-              </div>
-              <br><br>
-            </div>
-          </div>
-          <hr>
-
-          <div id="5" class="row">
-            <br>
-            <div class="col-md-2 col-sm-3 text-center">
-              <a class="story-title" href="#"><img alt="" src="http://api.randomuser.me/portraits/thumb/men/29.jpg" style="width:100px;height:100px" class="img-circle"></a>
-            </div>
-            <div class="col-md-10 col-sm-9">
-              <h3>TrendPaper - What's Trending in the World</h3>
-              <div class="row">
-                <div class="col-xs-9">
-                  <h4><span class="label label-default">betali.st</span></h4><h4>
-                  <small style="font-family:courier,'new courier';" class="text-muted">Last week • <a href="#" class="text-muted">Read More</a></small>
-                  </h4></div>
-                <div class="col-xs-3"></div>
-              </div>
-              <br><br>
-            </div>
-          </div>
-          <hr>
-          <!--/stories-->
-
-
-
-        </div>
-      </div>
-
-
-
-    </div><!--/col-12-->
   </div>
 </div>
 
 
-<hr>
 
 <footer class="footer">
   <div class="container">
