--- a/client/app/allGoogle/displayTrends.html
+++ b/client/app/allGoogle/displayTrends.html
@@ -7,7 +7,8 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a href="/allGoogle" class="navbar-brand">Home</a>
+<!--       <a href="/allGoogle" class="navbar-brand">Home</a> -->
+      <button ng-click="displayView===true" style="background: none; border: none; margin-top: 10px;">Home</button>
 <!--     </div>
     <nav class="collapse navbar-collapse" role="navigation">
       <ul class="nav navbar-nav">
@@ -26,6 +27,8 @@
       </ul>
     </nav>
   </div> -->
+    </div>
+  </div>
 </header>
 
 <div id="masthead">
