--- a/client/app/home/home.html
+++ b/client/app/home/home.html
@@ -23,7 +23,15 @@
     </form>
   </div>
 </div> -->
+<div>
+  <ul>
+    <li ng-repeat="twitter in twitterData | limitTo: 5">
+<!--       <p ng-bind-html="{{twitter}}"></p> -->
+      <p ng-bind-html="twitter"></p>
+    </li>
+  </ul>
 
+</div>
 <div class="container">
   <div class="col-md-12">
     <h1>News Feed</h1>
