--- a/client/app/allGoogle/displayTrends.html
+++ b/client/app/allGoogle/displayTrends.html
@@ -89,3 +89,12 @@
     </div> <!-- col-md-12 -->
   </div> <!-- row -->
 </div> <!-- container -->
+
+<footer class="footer">
+  <div class="container">
+    <a href="http://twitter.com/lijaimie"><img src="../../assets/images/twitter-wrap.png" alt="Twitter Logo" class="social-icon"></a>
+    <a href="#"><img src="../../assets/images/facebook-wrap.png" alt="Facebook Logo" class="social-icon"></a>
+    <!-- special syntax is an HTML entity that makes the copyright symbol -->
+    <p>&copy; 2014 Jaimie Li</p>
+  </div>
+</footer>
