--- a/client/app/allGoogle/transition.html
+++ b/client/app/allGoogle/transition.html
@@ -1,1 +1,15 @@
-<p>Loading page</p>
+<!-- <header class="navbar navbar-bright navbar-fixed-top" role="banner">
+  <div class="container">
+    <div class="navbar-header">
+      <button class="navbar-toggle" type="button" data-toggle="collapse" data-target=".navbar-collapse">
+        <span class="sr-only">Toggle navigation</span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+      <button ng-click="setDisplay(true)" style="background: none; border: none; margin-top: 10px">Home</button> -->
+<!--       <a href="/allGoogle" class="navbar-brand">Home</a> -->
+<!--       <button ng-click="stopStream()">Stop Stream</button> -->
+<!--     </div>
+  </div>
+</header> -->
