--- a/client/app/home/home.html
+++ b/client/app/home/home.html
@@ -30,10 +30,23 @@
       <p ng-bind-html="twitter"></p>
     </li>
   </ul>
-
 </div>
+
+
 <div class="container">
   <div class="col-md-12">
+  <tabset>
+    <tab heading="Static title">Static content</tab>
+    <tab ng-repeat="tab in tabs" heading="{{tab.title}}" active="tab.active" disabled="tab.disabled">
+      {{tab.content}}
+    </tab>
+    <tab select="alertMe()">
+      <tab-heading>
+        <i class="glyphicon glyphicon-bell"></i> Alert!
+      </tab-heading>
+      I've got an HTML heading, and a select callback. Pretty cool!
+    </tab>
+  </tabset>
     <h1>News Feed</h1>
     <button ng-click="home.twitter()">Twitter Trends</button>
     <button ng-click="home.twitterStream()">Twitter Stream</button>
@@ -58,6 +71,23 @@
     </div> -->
   <div>
 </div>
+
+  <nvd3-multi-bar-horizontal-chart
+      data="exampleData"
+        id="exampleId"
+        showXAxis="true"
+        showYAxis="true"
+        width="550"
+        height="350"
+        interactive="true"
+        tooltips="true"
+        forceX="[-1,1]"
+        showLegend="true"
+        tooltipcontent="toolTipContentFunction()"
+        >
+      <svg></svg>
+    </nvd3-multi-bar-horizontal-chart>
+
 
 {{original}}
 
