--- a/client/app/home/home.html
+++ b/client/app/home/home.html
@@ -72,6 +72,7 @@
   <div>
 </div>
 
+<div>
   <nvd3-multi-bar-horizontal-chart
       data="exampleData"
         id="exampleId"
@@ -87,7 +88,31 @@
         >
       <svg></svg>
     </nvd3-multi-bar-horizontal-chart>
+</div>
 
+
+<!-- <div>
+    <nvd3-bullet-chart
+      data="exampleData2"
+        id="exampleId"
+        margin="{left:75,top:60,bottom:60,right:10}"
+        width="550"
+        height="160">
+          <svg></svg>
+    </nvd3-bullet-chart>
+</div> -->
+
+<!-- <nvd3-discrete-bar-chart
+      data="exampleData3"
+        id="exampleId"
+        showXAxis="true"
+        showYAxis="true"
+        width="550"
+        height="400"
+        tooltips="true"
+        >
+          <svg></svg>
+    </nvd3-discrete-bar-chart -->>
 
 {{original}}
 
